fixed flicker, remove spaces...

--- a/src/containers/BasicCanvasManipulate/BasicCanvasManipulate.css
+++ b/src/containers/BasicCanvasManipulate/BasicCanvasManipulate.css
@@ -111,6 +111,6 @@ h5 {
   width: 10px;
 }
 
-.basic-canvas-section .ReactVirtualized__Table__rowColumn {
+.basic-canvas-manipulate-section .ReactVirtualized__Table__rowColumn {
   overflow: hidden !important;
 }
